增加jwt
