# app/model/auth.go
@@ -1,0 +1,14 @@
+package model
+
+type ApiLoginReq struct {
+	Name     string `json:"name"`
+	Password string `json:"password"`
+}
+
+/**
+Service
+*/
+type ServiceLoginReq struct {
+	Name     string `json:"name"`
+	Password string `json:"password"`
+}
