# app/model/internal/user.go
@@ -11,9 +11,10 @@ import (
 // User is the golang structure for table user.
 type User struct {
 	Id       uint        `orm:"id,primary" json:"id"`       // 用户ID
-	Passport string      `orm:"passport"   json:"passport"` // 用户账号
+	Name     string      `orm:"name"       json:"name"`     // 用户账号
+	NickName string      `orm:"nick_name"  json:"nickName"` // 用户昵称
 	Password string      `orm:"password"   json:"password"` // 用户密码
-	Nickname string      `orm:"nickname"   json:"nickname"` // 用户昵称
+	Status   int         `orm:"status"     json:"status"`   // 用户状态：1/正常,-1/禁用
 	CreateAt *gtime.Time `orm:"create_at"  json:"createAt"` // 创建时间
 	UpdateAt *gtime.Time `orm:"update_at"  json:"updateAt"` // 更新时间
 }
