# app/model/user.go
@@ -1,27 +1,0 @@
-// ==========================================================================
-// This is auto-generated by gf cli tool. Fill this file as you wish.
-// ==========================================================================
-
-package model
-
-import (
-	"evan-gf/app/model/internal"
-)
-
-// User is the golang structure for table user.
-type User internal.User
-
-// Fill with you ideas below.
-type UserApiSignUpReq struct {
-	Passport  string `v:"required|length:6,16#账号不能为空|账号长度应当在:min到:max之间"`
-	Password  string  `v:"required|length:6,16#请输入确认密码|密码长度应当在:min到:max之间"`
-	Password2 string `v:"required|length:6,16|same:Password#密码不能为空|密码长度应当在:min到:max之间|两次密码输入不相等"`
-	Nickname  string
-}
-
-// 注册输入参数
-type UserServiceSignUpReq struct {
-	Passport string
-	Password string
-	Nickname string
-}
